<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/sign_up_form_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_intro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_view" />

        <EditText
            android:id="@+id/sign_up_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_up_first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />
        <EditText
            android:id="@+id/sign_up_password_repeat_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:autofillHints="" />

        <EditText
            android:id="@+id/sign_up_age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/age_hint"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/sign_up_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_button" />

        <Button
            android:id="@+id/sign_up_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cancel_button" />
    </LinearLayout>
</ScrollView>