<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login_form_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_intro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_view" />

        <EditText
            android:id="@+id/login_user_or_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/user_or_email"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/login_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in_button" />

        <Button
            android:id="@+id/login_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up_button" />

    </LinearLayout>
</ScrollView>